--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.7",
     "mini-css-extract-plugin": "^1.6.2",
+    "prettier": "2.7.1",
     "sass": "^1.52.3",
     "sass-loader": "^10.2.1",
     "style-loader": "^3.3.1",
