--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=development",
+    "build-prod": "webpack --mode=production",
     "watch": "webpack --watch --mode=development"
   },
   "dependencies": {
