--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.18.6",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3"
   },
