--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.18.6",
-    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "babel-loader": "^8.2.5",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
