--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
