--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "truhlarstvi",
+  "name": "gkvr",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,7 +25,7 @@
     "sass": "^1.52.3",
     "sass-loader": "^10.2.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
+    "webpack": "^5.79.0",
     "webpack-cli": "^4.10.0"
   },
   "repository": {
